Remove icon-less link to github.

--- a/brainworms.dev/hugo.toml
+++ b/brainworms.dev/hugo.toml
@@ -8,10 +8,11 @@ pygmentscodefencesguesssyntax = true
 [params]
 	useCDN=false
 
-[[params.social]]
-name = "GitHub"
-icon = "github"
-url = "https://github.com/leander-elw"
+# Not sure why icon isn't working.
+# [[params.social]]
+# name = "GitHub"
+# icon = "github"
+# url = "https://github.com/leander-elw"
 
 [[menu.main]]
 name = "Home"
@@ -25,10 +26,10 @@ weight = 2
 
 [[menu.main]]
 name = "Blog"
-url = "/posts"
+url = "/tags"
 weight = 3
 
 [[menu.main]]
 name = "Projects"
-url = "/projects"
+url = "/tags/projects"
 weight = 4
